--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.14",
     "@types/node": "^25.0.3",
+    "drizzle-kit": "^0.31.8",
     "typescript": "^5.9.3"
   }
 }
