--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
     "@nestjs/throttler": "^6.5.0",
     "argon2": "^0.44.0",
     "bullmq": "^5.66.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "csv-stringify": "^6.6.0",
     "dayjs": "^1.11.19",
@@ -27,6 +28,7 @@
     "fastify": "^5.6.2",
     "ioredis": "^5.8.2",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.17.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
