--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "courier-management-system",
   "private": true,
+  "scripts": {
+    "dev": "pnpm -r --parallel dev",
+    "build": "pnpm -r build",
+    "start": "pnpm -r start"
+  },
   "workspaces": [
     "apps/*",
     "packages/*"
